Add GWT Super DevMode support